# bimmerllm

./: README.md  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
.claude/: CLAUDE.md
app/: globals.css  layout.tsx
app/(app)/: layout.tsx  page.tsx
components/: app-sidebar.tsx  chat-provider.tsx
components/chat/: ActionsBar.tsx  AssistantBlock.tsx  ChatPage.tsx  Composer.tsx  Message.tsx  ModelPicker.tsx  SourcesPanel.tsx  ThinkingDots.tsx  Thread.tsx  Topbar.tsx  UserBubble.tsx  Welcome.tsx
components/settings/: AccentSwatch.tsx  AppearanceSection.tsx  PreferencesSection.tsx  Segment.tsx  SettingsPage.tsx  ThemeSwatch.tsx  Toggle.tsx
components/ui/: icons.tsx
hooks/: useDisplayMessages.ts
lib/: agent.ts  chat-bridge.test.ts  chat-bridge.ts  citations.test.ts  citations.ts  conversation.test.ts  conversation.ts  format.ts  pinecone.ts  preferences.test.ts  preferences.ts  sources.test.ts  sources.ts  theme.ts
scripts/ingest/: .gitignore  README.md  pyproject.toml
scripts/ingest/ingest/: __init__.py  chunk.py  cli.py  config.py  db.py  http.py  parse.py  record.py
scripts/ingest/ingest/stages/: discover.py  fetch_threads.py  list_threads.py  upload.py
scripts/ingest/tests/: conftest.py  test_build_record.py  test_chunk.py  test_config.py  test_db.py  test_discover.py  test_fetch_threads.py  test_http.py  test_integration.py  test_list_threads.py  test_parse.py  test_upload.py
scripts/ingest/tests/fixtures/: forum_index_g80.html  forum_listing_g80_f888_p1.html  golden_record.json  thread_paged_g80.html  thread_short_g80.html
(+22 files in other folders)
